--- a/client/src/pages/CreateUser/CreateUser.css
+++ b/client/src/pages/CreateUser/CreateUser.css
@@ -8,3 +8,9 @@
     border-radius: 10px;
     top: 50px;
 }
+
+.incomplete {
+    color: rgba(197, 4, 4, 0.712);
+    font-style: italic;
+    font-size: 20px;
+}
