--- a/client/src/wrappers/LgBox/LgBox.css
+++ b/client/src/wrappers/LgBox/LgBox.css
@@ -4,6 +4,11 @@
     position: fixed;
 }
 
+.box {
+    width: 100%;
+    height: 100%;
+}
+
 .cover_top {
     position: fixed;
     z-index: 50;
@@ -28,13 +33,11 @@
     border-style: solid;
     border-color: rgb(218, 215, 215);
     border-width: 4px;
-    border-radius: 10px;
-    padding: 20px;
+    padding: 40px;
 }
 
 .inner_box {
     position: relative;
-    border-radius: 10px;
     width: 100%;
     min-height: 400px;
     background-color: rgba(8, 8, 8, 0.1)
