--- a/client/src/wrappers/LgBox/LgBox.css
+++ b/client/src/wrappers/LgBox/LgBox.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 0;
 }
 
 .box {
@@ -11,13 +12,18 @@
 
 .cover_top {
     position: fixed;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    left: 0;
     z-index: 50;
     height: 100%;
     width: 100%;
-    background-color: rgba(139, 255, 145, 0.1)
+    background-color: rgba(0, 0, 0, 0.1)
 }
 
 .lg_box_buffer {
+    
     width: 100%;
     height: 10%;
 }
@@ -25,13 +31,12 @@
 .center_lg_box {
     position: relative;
     margin: auto;
-    vertical-align: middle;
     width: 50%;
     min-height: 600px;
     z-index: 60;
     background-color: white;
     border-style: solid;
-    border-color: rgb(218, 215, 215);
+    border-color: rgba(124, 124, 124, 0.479);
     border-width: 4px;
     padding: 40px;
 }
