--- a/client/src/containers/ProfHead/ProfHead.css
+++ b/client/src/containers/ProfHead/ProfHead.css
@@ -2,3 +2,12 @@
     width: 100%;
     justify-content: center;
 }
+
+.profile-upload {
+    width: 15%;
+}
+
+.profile-picture {
+    width: 100%;
+    border-radius: 50%
+}
