--- a/client/public/main.css
+++ b/client/public/main.css
@@ -1,8 +1,11 @@
-body {
-    position: fixed;
-    top: 0;
-    height: 100%;
+html {
+    position: absolute;
     width: 100%;
-    background-color: white;
-    background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(68, 67, 67));
+    height: 100%;
+}
+
+body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
