--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -1,4 +1,25 @@
+html {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .hidden-button {
     position: absolute;
     left: -1000px;
+}
+
+.backDrop {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    /* background-color: rgb(209, 209, 209); */
+    background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(209, 209, 209));
 }
