--- a/client/src/wrappers/LgBox/LgBox.css
+++ b/client/src/wrappers/LgBox/LgBox.css
@@ -1,7 +1,7 @@
 .lg_box {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
     top: 0;
 }
 
@@ -11,7 +11,7 @@
 }
 
 .cover_top {
-    position: fixed;
+    position: absolute;
     margin: 0;
     padding: 0;
     top: 0;
