--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -4,6 +4,17 @@ html {
     height: 100%;
 }
 
+.lg-plant-image {
+    position: relative;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.center {
+    width: 80%;
+    margin: auto;
+}
+
 body {
     position: absolute;
     width: 100%;
