--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -31,6 +31,6 @@ body {
     top: 0;
     height: 100%;
     width: 100%;
-    /* background-color: rgb(209, 209, 209); */
-    background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(209, 209, 209));
+    background-color: #d5e1df
+    /* background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(189, 189, 189)); */
 }
