--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -27,7 +27,8 @@ body {
 }
 
 .backDrop {
-    position: absolute;
+    position: fixed;
+    z-index: -10;
     top: 0;
     height: 100%;
     width: 100%;
