--- a/client/src/wrappers/LgBox/LgBox.css
+++ b/client/src/wrappers/LgBox/LgBox.css
@@ -3,6 +3,7 @@
     height: 100%;
     position: absolute;
     top: 0;
+    left:0;
 }
 
 .box {
@@ -11,21 +12,22 @@
 }
 
 .cover_top {
-    position: absolute;
+    position: fixed;
     margin: 0;
     padding: 0;
     top: 0;
     left: 0;
+    right:0;
+    bottom:0;
     z-index: 50;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.1)
+    background-color: rgba(0, 0, 0, 0.4)
 }
 
 .lg_box_buffer {
-    
     width: 100%;
-    height: 5%;
+    height: 14%;
 }
 
 .center_lg_box {
@@ -37,6 +39,7 @@
     background-color: white;
     border-style: solid;
     border-color: rgba(124, 124, 124, 0.479);
+    background-color:  #d5e1df;
     border-width: 4px;
     padding: 40px;
 }
