--- a/client/src/containers/PlantCard/PlantCard.css
+++ b/client/src/containers/PlantCard/PlantCard.css
@@ -5,11 +5,29 @@
 .plant-name {
     width: 95%;
     display: inline-block;
+    margin: 30px;
 }
 
 .card-img {
     width: 100%
 }
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    left: -30px;
+    background-color: #f9f9f9;
+    -webkit-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    border-radius: 6px;
+    z-index: 99;
+}
+
 .hoist {
     width: 100%;
     position: relative;
@@ -40,16 +58,42 @@
     background-color: rgba(161, 0, 0, 0.3);
 }
 
-.comment {
-    width: 70%
+.comment-input {
+    width: 80%;
+    border-radius: 6px;
+
+}
+
+.comment-btn {
+    background-color: #86af49;
+    color: white;
+    padding: 5px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 4px;
+    border-radius: 6px;
+}
+
+.comment-thumb {
+    display: inline-block;
+    width: 50px;
+    border-radius: 50%
+}
+
+.comment-username {
+    margin-left: 10px;
+    font-size: 20px;
+    color: black;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.comment-username:hover {
+    color: #86af49;
 }
 
 .filter {
-   position: relative;
 	width: 100%;
-    top:0;
-    right:0;
-	left: 0;
 	visibility: hidden;
 	opacity: 0;
 }
