--- a/client/src/containers/PlantCard/PlantCard.css
+++ b/client/src/containers/PlantCard/PlantCard.css
@@ -54,10 +54,6 @@
     margin: auto;
 }
 
-.thriving {
-    background-color: rgba(161, 0, 0, 0.3);
-}
-
 .comment-input {
     width: 80%;
     border-radius: 6px;
@@ -90,6 +86,14 @@
 
 .comment-username:hover {
     color: #86af49;
+}
+
+#sick {
+    box-shadow:1px 1px 20px 0.2px red;
+}
+
+#thriving {
+    box-shadow:0px 0px 20px 0.2px rgb(1, 253, 1);
 }
 
 .filter {
