--- a/client/src/containers/ProBody/ProBody.css
+++ b/client/src/containers/ProBody/ProBody.css
@@ -1,6 +1,8 @@
 .body {
     width: 90%;
     margin: auto;
+    position: relative;
+    top: -100px;
 }
 
 .health-bar-box {
@@ -16,6 +18,8 @@
 
 .tab {
     color: gray;
+    font-size: 30px;
+    font-family: 'Special Elite', cursive;;
 }
 
 .tab:hover {
