--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -4,6 +4,13 @@ html {
     height: 100%;
 }
 
+.bottom-buffer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+}
+
 .lg-plant-image {
     position: relative;
     margin-bottom: 20px;
