--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -39,6 +39,8 @@ body {
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #d5e1df
-    /* background-image: linear-gradient(to bottom right, rgb(255, 255, 255), rgb(189, 189, 189)); */
+    background-color: #d5e1df;
+    
+    
+    
 }
